[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/LevelHUD.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/TowerSelectionPanel.gd" id="2"]

[node name="LevelHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="TopHBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveLabel" type="Label" parent="TopBar/TopHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Wave 1/1"
size_flags_horizontal = 3

[node name="HeatLabel" type="Label" parent="TopBar/TopHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Heat 0°C"
size_flags_horizontal = 3

[node name="LivesLabel" type="Label" parent="TopBar/TopHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Leaks 3"
size_flags_horizontal = 3

[node name="DamageLabel" type="Label" parent="TopBar/TopHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage 0"
size_flags_horizontal = 3

[node name="PauseButton" type="Button" parent="TopBar/TopHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 112)
layout_mode = 2
text = "⏸"

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 188.0
offset_right = -16.0
offset_bottom = 248.0
grow_horizontal = 2
text = ""
autowrap_mode = 3

[node name="BottomDock" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomVBox" type="VBoxContainer" parent="BottomDock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="TowerSelectionPanel" type="Control" parent="BottomDock/BottomVBox"]
unique_name_in_owner = true
script = ExtResource("2")
custom_minimum_size = Vector2(0, 180)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="BottomDock/BottomVBox/TowerSelectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="CardContainer" type="HBoxContainer" parent="BottomDock/BottomVBox/TowerSelectionPanel/Scroll"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="Sidebar" type="PanelContainer" parent="."]
anchors_preset = 9
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -170.0
offset_right = -16.0
offset_bottom = 30.0

[node name="SidebarVBox" type="VBoxContainer" parent="Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedButton" type="Button" parent="Sidebar/SidebarVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 112)
layout_mode = 2
text = "×1"

[node name="MiniMapPlaceholder" type="ColorRect" parent="Sidebar/SidebarVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
color = Color(0.15, 0.2, 0.27, 1)

[node name="TooltipPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="TooltipLabel" type="Label" parent="TooltipPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3
